--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,11 @@ dependencies:
   firebase_core: ^1.1.0
   cloud_firestore: ^1.0.7
   firebase_auth: ^1.1.2
+  firebase_storage: ^8.0.6
   provider: ^5.0.0
   intl: ^0.17.0
   flutter_spinkit: "^4.1.2"
+  image_picker: ^0.7.4
 
 
   # The following adds the Cupertino Icons font to your application.
