--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   intl: ^0.17.0
   flutter_spinkit: "^4.1.2"
   image_picker: ^0.7.4
+  rx_shared_preferences: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
